# MRF-Based-Deformable-image-Registration-GUI-application

./: README.md
mrf_gui_app/: CMakeLists.txt.user.5901925  affineLTS1.h  cuda_kernel.cu  fragment_shader.h  glwidget.cpp  glwidget.h  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  openglwidget.cpp  primsMST.h  readme.md  regularisation.h
qt_cuda_backup_4/: CMakeLists.txt  deedsBCV0.cpp  fragment_shader.glsl  longtaskworker.cpp  longtaskworker.h  mainwindow.ui  openglwidget.h  shaders.cpp  shaders.h  transformations.h  vertex_shader.h
